<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-150dp"
    android:layout_marginBottom="150dp">
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".how_to_pitch"
    android:orientation="vertical"
    android:weightSum="12"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pitch for 1 minutue"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"


        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your pitching must complete following point"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"

        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1. Who are you? "
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_are_you"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2. The Problem?"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/problem"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3. The Solution or The Idea?"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solution"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="4. Who do you need?"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_need"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum_up"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        />
</LinearLayout>
</ScrollView>